# Functional_Flight_Storage

./: README.md
pcb/altium/AT25EU0081A/: AT25EU - 16 MBit SPI.SchDoc  AT25EU - Chipset 16MBit SPI.PcbDoc  Constraints.xml  FFS - AT25EU.OutJob  FFS - AT25EU.PrjPcb  FFS - AT25EU.PrjPcbStructure
pcb/altium/MT29F2G08ABAEAWP/: CAMtastic1.Cam  Constraints.xml  FFS - MT29.BomDoc  FFS - MT29.OutJob  FFS - MT29.PrjPcbStructure  MT29 - Chipset 2GBiT Parallel.PcbDoc
pcb/altium/W25N01GVSFIG/: W25 - FFS.PrjPcb
pcb/gerber/AT25EU0081A/: AT25EU - Chipset 16MBit SPI_Copper_Signal_Bot.gbr  AT25EU - Chipset 16MBit SPI_Copper_Signal_Top.gbr  AT25EU - Chipset 16MBit SPI_Legend_Top.gbr  AT25EU - Chipset 16MBit SPI_NPTH_Drill.gbr  AT25EU - Chipset 16MBit SPI_PTH_Drill.gbr  AT25EU - Chipset 16MBit SPI_Paste_Bot.gbr  AT25EU - Chipset 16MBit SPI_Paste_Top.gbr  AT25EU - Chipset 16MBit SPI_Profile.gbr  AT25EU - Chipset 16MBit SPI_Soldermask_Top.gbr
pcb/gerber/MT29F2G08ABAEAWP/: MT29 - Chipset 2GBiT Parallel_Copper_Signal_Top.gbr  MT29 - Chipset 2GBiT Parallel_Legend_Top.gbr  MT29 - Chipset 2GBiT Parallel_Paste_Top.gbr  Status Report.Txt  (+3 more)
support-documents/: MT29Driver.py  prototype-chip-selection.md
usage/: README.md  data.txt  testing-suite.md
usage/W25N01GVSFIG-storage-driver/: Cargo.toml  Embed.toml  README.md
usage/W25N01GVSFIG-storage-driver/cargo/: config.toml
usage/W25N01GVSFIG-storage-driver/src/: main.rs
usage/W25N01GVSFIG-storage-driver/vscode/: launch.json
usage/gridfinity-mount/: README.md
usage/testing/: FlashStorage.py  MT29Driver.py  ONFIDriver.py  README.md
(+51 files in other folders)
