[package]
name = "storage-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-time = "0.12.1"
log = "0.4.21"
panic-halt = "0.2.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
stm32h7xx-hal = {version = "0.16.0", features = ["stm32h743v","rt", "xspi"]}
